force-app/main/default/objects/Campaign/fields/All_Attendees_Registered__c.field-meta.xml
<CustomField>
    <fullName>All_Attendees_Registered__c</fullName>
    <description>Picklist to confirm if all Welco Employees have been register for the related Trade show</description>
    <label>All Attendees Registered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>