force-app/main/default/objects/Campaign/fields/EarlyBirdDeadline__c.field-meta.xml
<CustomField>
    <fullName>EarlyBirdDeadline__c</fullName>
    <description>Early Bird date as requested by Marketing. Different from the Registration Deadline.</description>
    <label>Early Bird Deadline</label>
    <type>Date</type>
</CustomField>