force-app/main/default/objects/Campaign/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <description>Count of total employees attending/exhibiting the event</description>
    <label>Employees</label>
    <summaryFilterItems>
        <field>CampaignMember.MemberStatusType__c</field>
        <operation>equals</operation>
        <value>Employee</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>