force-app/main/default/objects/Campaign/fields/Existing_ContactsLeads__c.field-meta.xml
<CustomField>
    <fullName>Existing_ContactsLeads__c</fullName>
    <description>Count of total existing contacts and leads in the campaign/event</description>
    <label>Existing Contacts/Leads</label>
    <summaryFilterItems>
        <field>CampaignMember.MemberStatusType__c</field>
        <operation>equals</operation>
        <value>Existing Contact/Lead</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>