force-app/main/default/objects/Campaign/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>To determine the main industry to marketing related initiatives.</description>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>*Mystery Meat*</fullName>
            </value>
            <value>
                <fullName>Aggregate - Frac Sand</fullName>
            </value>
            <value>
                <fullName>Aggregate - Wash plant</fullName>
            </value>
            <value>
                <fullName>Animal Food</fullName>
            </value>
            <value>
                <fullName>Asphalt</fullName>
            </value>
            <value>
                <fullName>Bakery Products</fullName>
            </value>
            <value>
                <fullName>Beverages &amp; Bottling</fullName>
            </value>
            <value>
                <fullName>Cannabis</fullName>
            </value>
            <value>
                <fullName>Cement</fullName>
            </value>
            <value>
                <fullName>Chemicals &amp; Plastics</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Dairy Products</fullName>
            </value>
            <value>
                <fullName>Environmental &amp; Energy</fullName>
            </value>
            <value>
                <fullName>EPC - Industrial</fullName>
            </value>
            <value>
                <fullName>EPC - Mining</fullName>
            </value>
            <value>
                <fullName>EPC - Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Fire Protection</fullName>
            </value>
            <value>
                <fullName>Fruits &amp; Veggies</fullName>
            </value>
            <value>
                <fullName>Grain &amp; Pulse</fullName>
            </value>
            <value>
                <fullName>Grain &amp; Pulse - Seeds</fullName>
            </value>
            <value>
                <fullName>Grain &amp; Pulse - Terminals</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Landfills</fullName>
            </value>
            <value>
                <fullName>Meat Products</fullName>
            </value>
            <value>
                <fullName>Metalworking</fullName>
            </value>
            <value>
                <fullName>Mining - Coal</fullName>
            </value>
            <value>
                <fullName>Mining - Hard Rock</fullName>
            </value>
            <value>
                <fullName>Mining - Industrial Minerals</fullName>
            </value>
            <value>
                <fullName>Mining - Oil Sands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>