force-app/main/default/objects/Campaign/fields/Items_Sent__c.field-meta.xml
<CustomField>
    <fullName>Items_Sent__c</fullName>
    <label>Items Sent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>