force-app/main/default/objects/Campaign/fields/Location_Country__c.field-meta.xml
<CustomField>
    <fullName>Location_Country__c</fullName>
    <description>Country the venue is located in</description>
    <label>Location Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>