force-app/main/default/objects/Campaign/fields/Location_State__c.field-meta.xml
<CustomField>
    <fullName>Location_State__c</fullName>
    <description>Abbreviated State/Province the venue is located in</description>
    <label>Location State/Province</label>
    <length>2</length>
    <type>Text</type>
</CustomField>