force-app/main/default/objects/Campaign/fields/Location_Street__c.field-meta.xml
<CustomField>
    <fullName>Location_Street__c</fullName>
    <description>Street address of the venue</description>
    <label>Location Street</label>
    <type>TextArea</type>
</CustomField>