force-app/main/default/objects/Campaign/fields/Location_Zip__c.field-meta.xml
<CustomField>
    <fullName>Location_Zip__c</fullName>
    <description>Zip/Postal code of the venue</description>
    <label>Location Zip/Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>