force-app/main/default/objects/Campaign/fields/New_Leads__c.field-meta.xml
<CustomField>
    <fullName>New_Leads__c</fullName>
    <description>count of total new leads in the campaign/event</description>
    <label>New Leads</label>
    <summaryFilterItems>
        <field>CampaignMember.MemberStatusType__c</field>
        <operation>equals</operation>
        <value>New Lead</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>