force-app/main/default/objects/Campaign/fields/Reason_for_Not_Proceeding__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Not_Proceeding__c</fullName>
    <description>Free-text field to gather information regarding events the company doesn&apos;t attend/exhibit in and the campaigns the company aborts</description>
    <label>Reason for Not Proceeding</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>