force-app/main/default/objects/Campaign/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <description>Date everyone attending/exhibiting was confirmed for registration</description>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>