force-app/main/default/objects/Campaign/fields/Registration_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Registration_Deadline__c</fullName>
    <description>Last day for registration</description>
    <label>Registration Deadline</label>
    <type>Date</type>
</CustomField>