force-app/main/default/objects/Campaign/fields/Returned__c.field-meta.xml
<CustomField>
    <fullName>Returned__c</fullName>
    <label>Returned</label>
    <length>100</length>
    <type>Text</type>
</CustomField>