force-app/main/default/objects/Campaign/fields/Supplier_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Initiative__c</fullName>
    <description>field used to define campaigns that were done in collaboration with suppliers and vendors</description>
    <inlineHelpText>Campaign/Event is done in collaboration with the Supplier/Vendor</inlineHelpText>
    <label>Supplier Related Initiative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>