force-app/main/default/objects/Campaign/fields/Suppliers_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Suppliers_Vendors__c</fullName>
    <description>Count of Suppliers/Vendors met at the event</description>
    <label>Suppliers/Vendors</label>
    <summaryFilterItems>
        <field>CampaignMember.MemberStatusType__c</field>
        <operation>equals</operation>
        <value>Supplier/Vendor</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>