force-app/main/default/objects/Campaign/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>Calculates total cost from Marketing Expenses</description>
    <label>Total Cost</label>
    <summarizedField>Marketing_Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Marketing_Expense__c.Campaign_Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>