force-app/main/default/objects/Campaign/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Website field to provide a direct link for more information regarding the event</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>