force-app/main/default/objects/Campaign/recordTypes/InternalEvent.recordType-meta.xml
<RecordType>
    <fullName>InternalEvent</fullName>
    <active>true</active>
    <description>Celebrations, Company Events, Volunteer Events</description>
    <label>Internal Event</label>
</RecordType>