force-app/main/default/objects/Campaign/recordTypes/Online.recordType-meta.xml
<RecordType>
    <fullName>Online</fullName>
    <active>true</active>
    <description>Email, Webinar, Banner Ad</description>
    <label>Online</label>
</RecordType>