force-app/main/default/objects/Campaign/recordTypes/Print.recordType-meta.xml
<RecordType>
    <fullName>Print</fullName>
    <active>true</active>
    <description>Advertisement, Direct Mail</description>
    <label>Print</label>
</RecordType>