force-app/main/default/objects/Campaign/recordTypes/Seminar_Lunch_Learn.recordType-meta.xml
<RecordType>
    <fullName>Seminar_Lunch_Learn</fullName>
    <active>true</active>
    <description>Seminar, Lunch &amp; Learn, Education Sessions</description>
    <label>Seminar/Lunch &amp; Learn</label>
</RecordType>