force-app/main/default/objects/Campaign/recordTypes/Sponsorship.recordType-meta.xml
<RecordType>
    <fullName>Sponsorship</fullName>
    <active>true</active>
    <description>Welco&apos;s Sponsorship</description>
    <label>Sponsorship</label>
</RecordType>