force-app/main/default/objects/Campaign/recordTypes/Trade_Show_Event.recordType-meta.xml
<RecordType>
    <fullName>Trade_Show_Event</fullName>
    <active>true</active>
    <description>Trade Show, Conference</description>
    <label>Trade Show/Event</label>
</RecordType>