force-app/main/default/objects/Campaign/listViews/Campaigns_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Campaigns_Pending_Approval</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Location_City__c</columns>
    <columns>Location_State__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approved_by_Management__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>notEqual</operation>
        <value>Completed,Not Proceeding</value>
    </filters>
    <label>Campaigns Pending Approval</label>
    <sharedTo>
        <group>Marketing</group>
        <group>Salesforce_Managers</group>
        <group>Senior_Management</group>
    </sharedTo>
</ListView>