force-app/main/default/objects/Campaign/listViews/NotProceedingCCY.listView-meta.xml
<ListView>
    <fullName>NotProceedingCCY</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Location_City__c</columns>
    <columns>Location_State__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>Reason_for_Not_Proceeding__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.END_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Not Proceeding</value>
    </filters>
    <label>All Campaigns &amp; Events-NotProceeding CCY</label>
</ListView>