force-app/main/default/objects/Campaign/listViews/Upcoming.listView-meta.xml
<ListView>
    <fullName>Upcoming</fullName>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:120</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>notEqual</operation>
        <value>Completed,Not Proceeding</value>
    </filters>
    <label>Upcoming Campaigns &amp; Events</label>
</ListView>